@@ -45,11 +45,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\SetValueCommand.cs" />
+    <Compile Include="Compiler\ParserException.cs" />
     <Compile Include="Compiler\EndOfInputException.cs" />
     <Compile Include="Compiler\Lexer.cs" />
     <Compile Include="Compiler\LexerException.cs" />
+    <Compile Include="Compiler\Parser.cs" />
     <Compile Include="Compiler\Token.cs" />
     <Compile Include="Compiler\TokenType.cs" />
+    <Compile Include="Expressions\ConstantExpression.cs" />
+    <Compile Include="Language\Context.cs" />
+    <Compile Include="Language\ICommand.cs" />
+    <Compile Include="Language\IContext.cs" />
+    <Compile Include="Language\IExpression.cs" />
+    <Compile Include="Language\IFunction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
