@@ -1,0 +1,12 @@
+﻿namespace AjAla.Language
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public interface IExpression
+    {
+        object Evaluate(IContext context);
+    }
+}
